# rust-hpc-exercise

./: Cargo.toml  README.md  rust-toolchain
benches/: bench_main.rs  cache_associativity_bench.rs  hpc_benchmark.rs  sum_array_bench.rs
benches/benchmarks/: mod.rs  sum_array.rs  sum_array_bench.rs
src/: binary_search.rs  cache_associativity.rs  lib.rs  sum_array.rs
