[package]
name = "rust-hpc-exercise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
core_simd = { git = "https://github.com/rust-lang/portable-simd" }

[dev-dependencies]
criterion = { version = "0.3.5", features = ["async_tokio", "html_reports", "real_blackbox"] }
iai = "0.1"

[profile.bench]
debug = true

[[bench]]
name = "sum_array_bench"
harness = false

[[bench]]
name = "cache_associativity_bench"
harness = false